fix: Delete test data

--- a/web/static/html/index.html
+++ b/web/static/html/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Расписание группы ФТ-101</h1>
+        <h1 id="pageTitle">Загрузка расписания...</h1>
 
         <div class="menu">
             <a href="index.html" class="menu-button">Расписание</a>
@@ -18,73 +18,11 @@
     </header>
 
     <main>
-        <h2>Расписание на эту неделю</h2>
+        <h2 id="scheduleTitle">Расписание на эту неделю</h2>
         
-        <div class="day">
-            <h3>Понедельник</h3>
-            <div class="lesson">
-                <span class="time">9:00-10:30</span>
-                <span class="subject">Программирование</span>
-                <span class="room">301</span>
-                <span class="teacher">Иванов И.И.</span>
-            </div>
-            <div class="lesson">
-                <span class="time">10:45-12:15</span>
-                <span class="subject">Математика</span>
-                <span class="room">215</span>
-                <span class="teacher">Петрова А.С.</span>
-            </div>
-        </div>
-
-        <div class="day">
-            <h3>Вторник</h3>
-            <div class="lesson">
-                <span class="time">9:00-10:30</span>
-                <span class="subject">Физика</span>
-                <span class="room">101</span>
-                <span class="teacher">Сидоров В.П.</span>
-            </div>
-        </div>
-
-        <div class="day">
-            <h3>Среда</h3>
-            <div class="lesson">
-                <span class="time">9:00-12:15</span>
-                <span class="subject">Математика</span>
-                <span class="room">220</span>
-                <span class="teacher">Петрова А.С.</span>
-            </div>
-            <div class="lesson">
-                <span class="time">13:00-14:30</span>
-                <span class="subject">Английский язык</span>
-                <span class="room">410</span>
-                <span class="teacher">Козлова Е.В.</span>
-            </div>
-        </div>
-
-        <div class="day">
-            <h3>Четверг</h3>
-            <div class="lesson">
-                <span class="time">10:45-12:15</span>
-                <span class="subject">Программирование</span>
-                <span class="room">301</span>
-                <span class="teacher">Иванов И.И.</span>
-            </div>
-        </div>
-
-        <div class="day">
-            <h3>Пятница</h3>
-            <div class="lesson">
-                <span class="time">9:00-10:30</span>
-                <span class="subject">История</span>
-                <span class="room">205</span>
-                <span class="teacher">Николаев П.Д.</span>
-            </div>
-            <div class="lesson">
-                <span class="time">10:45-12:15</span>
-                <span class="subject">Физкультура</span>
-                <span class="room">102</span>
-                <span class="teacher">Смирнов А.В.</span>
+        <div id="scheduleContainer">
+            <div class="loading">
+                <p>Загрузка расписания...</p>
             </div>
         </div>
     </main>
