--- a/web/static/html/login.html
+++ b/web/static/html/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Личный кабинет студента</title>
+    <title>Вход в личный кабинет</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -26,7 +26,7 @@
             </div>
             
             <button type="button" onclick="login()" class="login-button">
-                Войти
+                <p>Войти</p>
             </button>
         </div>
     </main>
