feat: Add frontend for OAuth

--- a/web/static/login.html
+++ b/web/static/login.html
@@ -33,6 +33,14 @@
                 <a href="register.html" class="register-link">Нет аккаунта? Зарегистрироваться</a>
             </div>
         </div>
+
+        <div class="oauth-buttons" style="margin-top: 20px; text-align: center;">
+            <p style="margin-bottom: 10px; color: #666;">Или войти через:</p>
+            <button id="googleLogin" style="background: white; border: 1px solid #ddd; padding: 10px 20px; border-radius: 4px; cursor: pointer; display: flex; align-items: center; justify-content: center; gap: 10px; margin: 0 auto;">
+                <img src="https://www.google.com/favicon.ico" alt="Google" width="20">
+                <span>Google</span>
+            </button>
+        </div>
     </main>
 
     <script type="module" src="js/main.js"></script>
